--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,17 @@ div div p {
 
 	font-size: 1.5vw;
 }
+
+body{
+	background-color: #fef8e6;
+}
+
+h1{
+	text-align: center;
+	text-transform: uppercase;
+	background-color: lightgray;
+}
+p{
+	text-align: center;
+	text-transform: uppercase;
+}
