added the ability to mark tasks as finished, added hover css effect to the remove task buttons

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ div button.removetask {
 	background-color: #ccc;
 }
 
+div button.removetask:hover {
+	background-color: #aaa;
+}
+
 form input {
 	margin: 0 5px;
 }
